Fix spacing issue

--- a/packages/manager-components/src/templates/Fund/styles.css
+++ b/packages/manager-components/src/templates/Fund/styles.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  margin: var(--space-m) calc(var(--space-l) * -1);
+  margin: var(--space-m) calc(var(--space-m) * -1);
 }
 
 .trade__info-item {
@@ -10,14 +10,14 @@
   margin: 0;
   padding: 0;
   width: auto;
-  padding: var(--space-l);
+  padding: var(--space-m);
 }
 
 .trade__order {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  margin: var(--space-m) calc(var(--space-l) * -1);
+  margin: var(--space-m) calc(var(--space-m) * -1);
 
   @media (--viewport-l) {
     flex-wrap: nowrap;
@@ -27,13 +27,13 @@
 .trade__order-book {
   flex: 1 0 66.66%;
   overflow: hidden;
-  padding: var(--space-l);
+  padding: var(--space-m);
 }
 
 .trade__order-form {
   flex: 1 0 33.33%;
   min-width: 300px;
-  padding: var(--space-l);
+  padding: var(--space-m);
 }
 
 .trade__open-orders {
